    + Add VLAN button not working (#2741);
    + Incorrect subnet links in /tools/vrf/ view. (#2774);
    + Location data missing in exports. (#2833);
    + Check mysqldump path when exporting database;
    + Current rack position missing when editing a device. (#2545);
    + API:
        + Fixed /user/ calls for SSL with app code (static app code);

    Security Fixes:
    ----------------------------
    + SQL injections processing `tableName` (#2738);
    + SQL injections processing `ftype` (#2751);

== 1.4

    New features:
    ------------
    + Configurable password policy;
    + Sessions can be now stored in database (#516);
    + Two-factor authentication - otp (Google Authenticator);
    + Customers module (#694);
    + Routing module (BGP) (#2135);
    + Search for free subnet inside whole section;

    Enhancements, changes:
    ----------------------------
    + Circuits enhancements (Virtual Circuits);
    + Dropped support for 32bit systems;
    + PHP 5.4 is now required;
    + Added compressed actions dropdown;
    + SNMP module no longer requires MIB files;
    + Performance enhancements running under Azure/Amazon;
    + Added option to disable user (#1327);
    + Added policy NAT option;
    + Added custom NAT fields;
    + Rack module enhancements (#1325):
        + Dynamic rack sizes;
        + Top-down / Bottom-up racks;
        + Custom rack devices independent of devices (power, patch panel);
    + Customized user permissions for modules:
        + VLAN module;
        + VRF module;
        + PowerDNS module;
        + Circuits module;
        + Customers module;
        + Devices module;
        + Rack module;
        + NAT module;
        + PSTN module;
        + Locations module;
    + API:
        + New API security type - SSL with app code (static app code);
        + New config.php option $api_allow_unsafe to allow non-SSL API queries;
        + Added last access field to api;
        + Add Mac Search for Addresses controller (#2005);