@@ -21,6 +21,7 @@
     + Current rack position missing when editing a device. (#2545);
     + API:
         + Fixed /user/ calls for SSL with app code (static app code);
+        + Address IP field not displayed when using filter_by (#2934);
 
     Security Fixes:
     ----------------------------
